fix: imrove img gap

--- a/css/style.scss
+++ b/css/style.scss
@@ -122,8 +122,8 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    column-gap: 40px;
-    row-gap: 40px;
+    column-gap: 30px;
+    row-gap: 30px;
   }
 
   // .ingredients__image
